service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-django-sample-app
spec:
  type: NodePort
  selector:
    app: helloworld
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30005
